added ID for submit button.

--- a/Main/index.html
+++ b/Main/index.html
@@ -57,7 +57,7 @@
                       </div>
                   </form>
               </div>
-              <a href="searchresults.html"><button class="submit-btn modal-button waves-effect btn">Submit</button></a>
+              <a href="searchresults.html"><button id="submit-button" class="submit-btn modal-button waves-effect btn">Submit</button></a>
             </div>
         </div>
     </section>
@@ -116,9 +116,9 @@
         <!--<script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
     </script>-->
-        <script src="js/script.js"></script>
+        <!-- <script src="js/script.js"></script> -->
         <script src="js/map.js"></script>
-        <script src="./js/resultsscript.js"></script>
+        <!-- <script src="./js/resultsscript.js"></script> -->
 </body>
 
 </html>
