--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -150,8 +150,8 @@
     </script>
     <!-- Custom Javascript Files -->
     <script src="js/map.js"></script>
-    <script src="js/resultsscript.js"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="js/resultsscript.js"></script> -->
+    <!-- <script src="js/script.js"></script> -->
    
 </body>
 
