--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -7,15 +7,15 @@
     <title>Take A Hike</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css"  media="screen,projection"/>
-    <link rel ="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css" media="screen,projection" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <!-- Navigation -->
     <nav>
         <div class="nav-wrapper green lighten-3">
-          <a href="#" class="brand-logo">Logo</a>
+            <a href="#" class="brand-logo">Logo</a>
         </div>
     </nav>
     <div class="container col s12">
@@ -25,21 +25,21 @@
                     <h3>Search Results</h3>
                 </div>
                 <div class="card small hoverable">
-                  <div class="card-image">
-                    <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Trail Name</span>
-                    <p>Trail Location / Address </p>
-                  </div>
+                    <div class="card-image">
+                        <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">Trail Name</span>
+                        <p>Trail Location / Address </p>
+                    </div>
                 </div>
                 <div class="card small hoverable">
                     <div class="card-image">
-                    <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
+                        <img src="https://www.arborday.org/images/hero/medium/hero-pine-forest-morning-light.jpg">
                     </div>
                     <div class="card-content">
-                    <span class="card-title">Trail Name</span>
-                    <p>Trail Location / Address</p>
+                        <span class="card-title">Trail Name</span>
+                        <p>Trail Location / Address</p>
                     </div>
                 </div>
                 <div id="previous-search">
@@ -54,6 +54,7 @@
         </section>
     </div>
     <div></div>
+
     <section id="local-weather" class="col s12 green darken-4">
         <div id="forecast-wrapper" class="col s8 container">
             <div class="row">
@@ -62,90 +63,101 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 1  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                        <h5 id="gghg">Day 1 <i class="forecast">cloud</i></h5>
+                        <span id="fDate0"></span>
+                        <span id="fTemp0">Temperature: </span>
+                        <span id="fHumidity0">Humidity: </span><br>
+                        <span id="wind-speed0">Wind Speed: </span><br>
+                        <span id="uv-index0">UV Index: </span>
                     </div>
                 </div>
-                <div class="col s2">
-                    <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 2  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                <div class="col s2 ">
+                    <div class="card-panel green lighten-4 weather-card ">
+                        <h5 class="city-name mb-1 mt-2 bolder ">Day 2 <i class="material-icons ">cloud</i></h5>
+                        <span id="fDate1"></span>
+                        <span id="fTemp1">Temperature: </span>
+                        <span class="fTemp1">Temperature: </span>
+                        <span class="fHumidity1">Humidity: </span><br>
+                        <span class="wind-speed1">Wind Speed: </span><br>
+                        <span class="uv-index1">UV Index: </span>
                     </div>
                 </div>
-                <div class="col s2">
-                    <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 3  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                <div class="col s2 ">
+                    <div class="card-panel green lighten-4 weather-card ">
+                        <h5 class="black-text ">Day 3 <i class="material-icons ">cloud</i></h5>
+                        <span id="fDate2"></span>
+                        <span id="fTemp2">Temperature: </span>
+                        <span class="fTemp2">Temperature: </span>
+                        <span class="fHumidity2">Humidity: </span><br>
+                        <span class=="wind-speed2">Wind Speed: </span><br>
+                        <span class="uv-index2">UV Index: </span>
                     </div>
                 </div>
-                <div class="col s2">
-                    <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 4  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                <div class="col s2 ">
+                    <div class="card-panel green lighten-4 weather-card ">
+                        <h5 class="black-text ">Day 4 <i class="material-icons ">cloud</i></h5>
+                        <span id="fDate3"></span>
+                        <span id="fTemp3">Temperature: </span>
+                        <span class="fTemp3">Temperature: </span>
+                        <span class="fHumidity3">Humidity: </span><br>
+                        <span class="wind-speed3">Wind Speed: </span><br>
+                        <span id="iv-index3">UV Index: </span>
                     </div>
                 </div>
-                <div class="col s2">
-                    <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 5  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                <div class="col s2 ">
+                    <div class="card-panel green lighten-4 weather-card ">
+                        <h5 class="black-text ">Day 5 <i class="material-icons ">cloud</i></h5>
+                        <span id="fDate4"></span>
+                        <span id="fTemp4">Temperature: </span>
+                        <span class="fTemp4">Temperature: </span>
+                        <span class="fHumidity4">Humidity: </span><br>
+                        <span id="wind-speed4">Wind Speed: </span><br>
+                        <span id="iv-index4">UV Index: </span>
                     </div>
                 </div>
-                <div class="col s2">
-                    <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 6  <i class="material-icons">cloud</i></h5>
-                        <span class="black-text">Temperature: </span>
-                        <span class="black-text">Humidity: </span><br>
-                        <span class="black-text">Wind Speed: </span><br>
-                        <span class="black-text">UV Index: </span>
+                <div class="col s2 ">
+                    <div class="card-panel green lighten-4 weather-card ">
+                        <h5 class="black-text ">Day 6 <i class="material-icons ">cloud</i></h5>
+                        <span id="fDate5"></span>
+                        <span id="fTemp5">Temperature: </span>
+                        <span class="fTemp5">Temperature: </span>
+                        <span class="fHumidity5">Humidity: </span><br>
+                        <span id="wind-speed5">Wind Speed: </span><br>
+                        <span id="iv-index5">UV Index: </span>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- Footer -->
-    <footer class="page-footer green lighten-3 z-depth-2">
-        <div class="container">
-          <div class="row">
-            <div class="col l12 s12">
-              <h5 class="green-text center">DEVELOPED BY</h5>
-              <div class="col s4">
-                <h6 class="center green-text">Faith Green</h6>
-                <p class="center"><a class="grey-text text-lighten-4 git-link" href="https://github.com/faithelizagreen" target="_blank">github.com/faithelizagreen</a></p>
-              </div>
-              <div class="col s4">
-                <h6 class="center green-text">Jessica Galarza</h6>
-                <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/jessica9410" target="_blank">github.com/jessica9410</a></p>
-              </div>
-              <div class="col s4">
-                <h6 class="center green-text">Leah Davis</h6>
-                <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/luminescify" target="_blank">github.com/luminescify</a></p>
+    <footer class="page-footer green lighten-3 z-depth-2 ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col l12 s12 ">
+                    <h5 class="green-text center ">DEVELOPED BY</h5>
+                    <div class="col s4 ">
+                        <h6 class="center green-text ">Faith Green</h6>
+                        <p class="center "><a class="grey-text text-lighten-4 git-link " href="https://github.com/faithelizagreen " target="_blank ">github.com/faithelizagreen</a></p>
+                    </div>
+                    <div class="col s4 ">
+                        <h6 class="center green-text ">Jessica Galarza</h6>
+                        <p class="center "><a class="grey-text text-lighten-4 " href="https://github.com/jessica9410 " target="_blank ">github.com/jessica9410</a></p>
+                    </div>
+                    <div class="col s4 ">
+                        <h6 class="center green-text ">Leah Davis</h6>
+                        <p class="center "><a class="grey-text text-lighten-4 " href="https://github.com/luminescify " target="_blank ">github.com/luminescify</a></p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </footer>
+    </footer>
 
     <!-- Compressed JavaScript -->
-    <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript " src="./css/materialize/js/materialize.js "></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&callback=initMap ">
     </script>
-    <script src="js/script.js"></script>
+    <script src="./js/weather.js"></script>
 </body>
 
 </html>
