--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Take A Hike</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="./Assets/images/mountain.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./Assets/images/mountain.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css" media="screen,projection" />
     <!-- Google Places -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <link rel ="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body id="searchresults">
     <!-- Navigation -->
     <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
+            <a href="#" class="brand-logo">Logo</a>
         </div>
     </nav>
 
@@ -37,18 +37,13 @@
             </div>
             <div class="col s8">
                 <div style="display: none">
-                    <input
-                      id="pac-input"
-                      class="controls"
-                      type="text"
-                      placeholder="Enter a location"
-                    />
-                  </div>
-                  <div id="map"></div>
+                    <input id="pac-input" class="controls" type="text" placeholder="Enter a location" />
+                </div>
+                <div id="map"></div>
             </div>
         </section>
     </div>
-    
+
     <!-- Weather Cards -->
     <section id="local-weather" class="col s12 brown darken-3">
         <div id="forecast-wrapper" class="col s8 container">
@@ -62,7 +57,7 @@
                 <!-- Cards -->
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 1  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 1 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -71,7 +66,7 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 2  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 2 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -80,7 +75,7 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 3  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 3 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -89,7 +84,7 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 4  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 4 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -98,7 +93,7 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 5  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 5 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -107,7 +102,7 @@
                 </div>
                 <div class="col s2">
                     <div class="card-panel green lighten-4 weather-card">
-                        <h5 class="black-text">Day 6  <i class="material-icons">cloud</i></h5>
+                        <h5 class="black-text">Day 6 <i class="material-icons">cloud</i></h5>
                         <span class="black-text">Temperature: </span>
                         <span class="black-text">Humidity: </span><br>
                         <span class="black-text">Wind Speed: </span><br>
@@ -117,28 +112,32 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Footer -->
     <footer class="page-footer z-depth-2">
         <div class="container">
-          <div class="row">
-            <div class="col l12 s12">
-              <h5 class="white-text center">DEVELOPED BY</h5>
-              <div class="col s4">
-                <h6 class="center white-text">Faith Green</h6>
-                <p class="center"><a class="grey-text text-lighten-4 git-link" href="https://github.com/faithelizagreen" target="_blank">github.com/faithelizagreen</a></p>
-              </div>
-              <div class="col s4">
-                <h6 class="center white-text">Jessica Galarza</h6>
-                <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/jessica9410" target="_blank">github.com/jessica9410</a></p>
-              </div>
-              <div class="col s4">
-                <h6 class="center white-text">Leah Davis</h6>
-                <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/luminescify" target="_blank">github.com/luminescify</a></p>
+            <div class="row">
+                <div class="col l12 s12">
+                    <h5 class="white-text center">DEVELOPED BY</h5>
+                    <div class="col s4">
+                        <h6 class="center white-text">Faith Green</h6>
+                        <p class="center"><a class="grey-text text-lighten-4 git-link"
+                                href="https://github.com/faithelizagreen" target="_blank">github.com/faithelizagreen</a>
+                        </p>
+                    </div>
+                    <div class="col s4">
+                        <h6 class="center white-text">Jessica Galarza</h6>
+                        <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/jessica9410"
+                                target="_blank">github.com/jessica9410</a></p>
+                    </div>
+                    <div class="col s4">
+                        <h6 class="center white-text">Leah Davis</h6>
+                        <p class="center"><a class="grey-text text-lighten-4" href="https://github.com/luminescify"
+                                target="_blank">github.com/luminescify</a></p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-      </footer>
+    </footer>
 
     <!-- Compressed JavaScript -->
     <script type="text/javascript" src="./css/materialize/js/materialize.js"></script>
@@ -146,13 +145,13 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Google Maps + Places API -->
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places&callback=initMap">
     </script>
     <!-- Custom Javascript Files -->
     <script src="js/map.js"></script>
     <!-- <script src="js/resultsscript.js"></script> -->
     <!-- <script src="js/script.js"></script> -->
-   
+
 </body>
 
 </html>
