Worked with local storage to append to page and save locally. Updated modal functionality

--- a/Main/index.html
+++ b/Main/index.html
@@ -53,7 +53,7 @@
                       </div>
                       <div class="col s6">
                         <!-- Choose the day you'd like to hike -->
-                        <input type="text" class="datepicker custom-datepicker" placeholder="Select the first day of your hike">
+                        <input type="date" class="datepicker custom-datepicker" placeholder="Select the first day of your hike">
                       </div>
                   </form>
               </div>
@@ -118,7 +118,7 @@
     </script>-->
         <!-- <script src="js/script.js"></script> -->
         <script src="js/map.js"></script>
-        <!-- <script src="./js/resultsscript.js"></script> -->
+        <script src="./js/resultsscript.js"></script>
 </body>
 
 </html>
