--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
+          <a href="index.html" class="brand-logo">Logo</a>
         </div>
     </nav>
 
@@ -33,6 +33,7 @@
                     <h5 class="section">Previous Searches</h5>
                     <div class="divider"></div>
                     <div id="searches"></div>
+                    <p id="clear-button">clear</p>
                 </div>
             </div>
             <div class="col s8">
@@ -149,8 +150,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places">
     </script>
     <!-- Custom Javascript Files -->
-    <script src="js/map.js"></script>
-    <!-- <script src="js/resultsscript.js"></script> -->
+    <!-- <script src="js/map.js"></script> -->
+    <script src="js/resultsscript.js"></script> -->
     <!-- <script src="js/script.js"></script> -->
    
 </body>
