--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -8,7 +8,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/jpg" href="./Assets/images/mountain.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
+    <!-- Import reset css -->
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <!--Import materialize css-->
     <link type="text/css" rel="stylesheet" href="./css/materialize/css/materialize.css" media="screen,projection" />
     <!-- Google Places -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -19,7 +21,9 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo">Logo</a>
+            <a href="index.html" class="logo">
+            <img src="./Assets/images/logo4.png" alt="take a hike logo">
+            </a>
         </div>
     </nav>
 
@@ -29,8 +33,6 @@
                 <div id="search-results">
                     <h3>Search Results</h3>
                 </div>
-              
-
                 <div id="previous-search">
                     <h5 class="section">Previous Searches</h5>
                     <div class="divider"></div>
@@ -142,9 +144,7 @@
     <!-- Custom Javascript Files -->
     <script src="js/map.js"></script>
     <script src="./js/weather.js"></script>
-    <!-- <script src="js/resultsscript.js"></script> -->
-    <!-- <script src="js/script.js"></script> -->
-
+   
 </body>
 
 </html>
