fixed map errors

--- a/Main/searchresults.html
+++ b/Main/searchresults.html
@@ -139,7 +139,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Google Maps + Places API -->
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBs094KFbn1VNf7g8NEjgVeCZapYcbfT08&libraries=places">
     </script>
     <!-- Custom Javascript Files -->
     <script src="js/map.js"></script>
