--- a/searchresults.html
+++ b/searchresults.html
@@ -22,7 +22,7 @@
     <nav>
         <div class="nav-wrapper">
             <a href="index.html" class="logo">
-            <img src="./Assets/images/logo4.png" alt="take a hike logo">
+            <img src="./assets/images/logo4.png" alt="take a hike logo">
             </a>
         </div>
     </nav>
