updated more photos

--- a/searchresults.html
+++ b/searchresults.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Take A Hike</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="./Assets/images/mountain.png" />
+    <link rel="shortcut icon" type="image/jpg" href="./assets/images/mountain.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import reset css -->
     <link rel="stylesheet" href="./css/reset.css"/>
