--- a/searchresults.html
+++ b/searchresults.html
@@ -30,8 +30,8 @@
     <div class="container">
         <section id="results" class="row">
             <div class="col s4">
-                <div id="search-results">
-                    <h3>Search Results</h3>
+                <h3>Search Results</h3>
+                <div id="search-results" class="myBox">
                 </div>
                 <div id="previous-search">
                     <h5 class="section">Previous Searches</h5>
