Updated homepage CSS and hero image functionality

--- a/searchresults.html
+++ b/searchresults.html
@@ -40,7 +40,7 @@
                     <p id="clear-button">clear</p>
                 </div>
             </div>
-            <div class="col s8">
+            <div id="map-wrapper" class="col s8">
                 <div style="display: none">
                     <input id="pac-input" class="controls" type="text" placeholder="Enter a location" />
                 </div>
