--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
   <!-- Jumbotron/Hero -->
   <div class="col s12">
-    <section class="jumbotron">
-      <img class="hero responsive-img" src="assets/images/heroimage.jpeg">
+    <section class="jumbotron hero">
+      <!-- <img class="hero responsive-img" src="./assets/images/heroimage_new.jpg"> -->
       <!-- Modal Trigger -->
       <div class="center buttons-wrapper">
         <button href="#demo-modal" id="hero-button"
@@ -57,40 +57,43 @@
             <form class="col s12">
               <div class="input-field col s12">
                 <input id="city-and-state" type="text" class="validate" placeholder="City and State"></input>
-                <!-- <label for="location">City and State </label> -->
               </div>
               <div class="col s6">
                 <!-- Choose the day you'd like to hike -->
                 <input type="date" class="datepicker custom-datepicker" placeholder="Select the first day of your hike">
               </div>
-            </form>
-          </div>
+            </div>
           </form>
-        </div>
-        <a href="searchresults.html"><button id="submit-button"
+          <a href="searchresults.html"><button id="submit-button"
             class="submit-btn modal-button waves-effect btn">Submit</button></a>
+        </div>
       </div>
   </div>
   </section>
   </div>
 
   <!-- About the app section -->
-  <section id="app-info" class="container">
+  <section id="app-info" class="section container">
     <div class="row">
-      <img class="aboutImg col s6 z-depth" src="assets/images/frontpageimage.jpeg">
-      <h4>About</h4>
-      <p>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo
-        consequat.
-      </p>
-      <p>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum."
-      </p>
+      <div class="col s6">
+        <img class="left aboutImg z-depth" src="assets/images/frontpageimage.jpeg">
+      </div>
+      <div class="right col s6">
+        <h4>About</h4>
+        <p>
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo
+          consequat.
+        </p>
+        <p>
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+          laborum."
+        </p>
+      </div>
+      
     </div>
   </section>
 
@@ -103,19 +106,19 @@
           <h5 class="white-text center">DEVELOPED BY</h5>
           <div class="col s4">
             <h6 class="center gray-text" id="name">Faith Green</h6>
-            <a href="https://github.com/faithelizagreen">
+            <a href="https://github.com/faithelizagreen" target="_blank">
               <p class="grey-text text-lighten-4 center">github.com/faithelizagreen</p>
             </a>
           </div>
           <div class="col s4">
             <h6 class="center white-text" id="name">Jessica Galarza</h6>
-            <a href="https://github.com/jessica9410">
+            <a href="https://github.com/jessica9410" target="_blank">
               <p class="grey-text text-lighten-4 center">github.com/jessica9410</p>
             </a>
           </div>
           <div class="col s4">
             <h6 class="center white-text" id="name">Leah Davis</h6>
-            <a href="https://github.com/luminescify">
+            <a href="https://github.com/luminescify" target="_blank">
               <p class="grey-text text-lighten-4 center">github.com/luminescify</p>
             </a>
           </div>
